# gemote

./: CMakeLists.txt  README.md  autoexec.cfg  emotes.lua
src/: lua.cpp  lua.hpp  main.cpp
